# EN4594_IMU_Sensor_Calibration

./: README.md
Lab 01-20241016/zumo/zumo_calibration/: CMakeLists.txt
Lab 01-20241016/zumo/zumo_calibration/include/zumo_calibration/: definitions.hpp  zumo_acc_calib.hpp
Lab 01-20241016/zumo/zumo_calibration/src/: acc_main.cpp  mag_main.cpp  zumo_acc_calib.cpp
Lab 01-20241016/zumo/zumo_defs/include/zumo_defs/: zumo_definitions.hpp
Lab 01-20241016/zumo_interface/: zumo_interface.ino
Lab 02-20241017/: zumo_imu.rviz
Lab 02-20241017/zumo/zumo_imu_kf/src/: zumo_imu_kf.cpp
Lab 02-20241017/zumo/zumo_launch/launch/: zumo_imu_kf.launch
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: custom_subscriber.cpp  number_publisher.py
src/py_pkg/: CMakeLists.txt  package.xml
src/py_pkg/scripts/: simple_publisher.py
src/zumo_calibration/include/zumo_calibration/: zumo_mag_calib.hpp
src/zumo_calibration/src/: zumo_mag_calib.cpp
src/zumo_defs/: CMakeLists.txt
src/zumo_description/: CMakeLists.txt
src/zumo_imu_kf/: CMakeLists.txt
src/zumo_imu_kf/include/zumo_imu_kf/: definitions.hpp  zumo_imu_kf.hpp
src/zumo_imu_kf/src/: main.cpp  zumo_imu_kf.cpp
src/zumo_launch/: CMakeLists.txt
src/zumo_launch/launch/: zumo_imu_kf.launch
src/zumo_msgs/: CMakeLists.txt
src/zumo_serial/: CMakeLists.txt
src/zumo_serial/include/zumo_serial/: definitions.hpp  zumo_serial_node.hpp
src/zumo_serial/src/: main.cpp  zumo_serial_node.cpp
